@@ -29,6 +29,7 @@ type Prospector struct {
 	states           *file.States
 	wg               sync.WaitGroup
 	harvesterCounter uint64
+	stateMutex       sync.Mutex
 }
 
 type Prospectorer interface {
@@ -116,18 +117,7 @@ func (p *Prospector) Run() {
 				logp.Info("Prospector channel stopped")
 				return
 			case event := <-p.harvesterChan:
-				// Add ttl if cleanOlder is enabled
-				if p.config.CleanInactive > 0 {
-					event.State.TTL = p.config.CleanInactive
-				}
-
-				ok := p.outlet.OnEvent(event)
-				if !ok {
-					logp.Info("Prospector outlet closed")
-					return
-				}
-
-				p.states.Update(event.State)
+				p.updateState(event)
 			}
 		}
 	}()
@@ -145,6 +135,26 @@ func (p *Prospector) Run() {
 			p.prospectorer.Run()
 		}
 	}
+}
+
+// updateState updates the prospector state and forwards the event to the spooler
+// All state updates done by the prospector itself are synchronous to make sure not states are overwritten
+func (p *Prospector) updateState(event *input.Event) {
+	p.stateMutex.Lock()
+	defer p.stateMutex.Unlock()
+
+	// Add ttl if cleanOlder is enabled
+	if p.config.CleanInactive > 0 {
+		event.State.TTL = p.config.CleanInactive
+	}
+
+	ok := p.outlet.OnEvent(event)
+	if !ok {
+		logp.Info("Prospector outlet closed")
+		return
+	}
+
+	p.states.Update(event.State)
 }
 
 func (p *Prospector) Stop() {
@@ -176,11 +186,23 @@ func (p *Prospector) startHarvester(state file.State, offset int64) error {
 	}
 
 	state.Offset = offset
+	// All harvesters must start with a finished state
+	state.Finished = false
+
 	// Create harvester with state
 	h, err := p.createHarvester(state)
 	if err != nil {
 		return err
 	}
+
+	reader, err := h.Setup()
+	if err != nil {
+		return fmt.Errorf("Error setting up harvester: %s", err)
+	}
+
+	// State is directly updated and not through channel to make state update immidiate
+	// State is only updated after setup is completed successfully
+	p.updateState(input.NewEvent(state))
 
 	p.wg.Add(1)
 	// startHarvester is not run concurrently, but atomic operations are need for the decrementing of the counter
@@ -191,8 +213,9 @@ func (p *Prospector) startHarvester(state file.State, offset int64) error {
 			atomic.AddUint64(&p.harvesterCounter, ^uint64(0))
 			p.wg.Done()
 		}()
+
 		// Starts harvester and picks the right type. In case type is not set, set it to defeault (log)
-		h.Harvest()
+		h.Harvest(reader)
 	}()
 
 	return nil
